Bugfix: Inconsistency in GWDTTRacer backed by SparseStorageBackend...